infra/k8s/providers/gke/prod/ingress-provider.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-ingress-frontend
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: dq-managed-cert
spec:
  ingressClassName: gce
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-ingress-keycloak
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: dq-managed-cert
spec:
  ingressClassName: gce
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-ingress-openmetadata
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: dq-managed-cert
spec:
  ingressClassName: gce
